jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one
        ports:
        - containerPort: 16686
          name: http
        - containerPort: 16687
          name: otlp
        volumeMounts:
        - name: jaeger-data
          mountPath: /jaeger-data
      volumes:
      - name: jaeger-data
        persistentVolumeClaim:
          claimName: jaeger-data
