jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
  - name: web
    port: 16686
    targetPort: 16686
  - name: collector
    port: 16687
    targetPort: 16687
