jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - trace.jaeger.me
      secretName: auth-tls-secret-jaeger
  rules:
    - host: trace.jaeger.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
          - path: /traces
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port: 
                  number: 16687
